2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H, SETR): Trivially refactor.  Rename register to
	conform to convention: `hd-mark-trimmed` -> `hd@mark-trimmed`.
	This register is used outside of its "module", "hd".

2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (H, LI): Trivially refactor.  Annotate and test
	threshold registers consistently.

2023-02-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Fix code style nit.  Except for initial register
	tests for GNU troff formatter and compatibility mode, migrate
	special character, register, and string interpolation escape
	sequences from `(xx` form to `[xx]`.  Also rewrite an instance
	of `\nP` to `\n[P]`.

2023-01-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	When register `Pt` was 2, paragraphs immediately following
	displays and lists were being indented, contrary to DWB mm
	behavior.

	* m.tmac: Replace `par@ind-flag` register with two separate
	state bits, `par*indentation-eligible` and
	`par@suppress-indentation`.
	(P, nP): Remove complex test for deciding whether the current
	paragraph is being set immediately after a heading.
	(P): Set `par*indentation-eligible` to the logical complement of
	`par@suppress-indentation`.  Call `par@doit` (which underlies
	both `P` and `nP`) unconditionally.
	(nP): Force `par*indentation-eligible` off, since numbered
	paragraphs are not influenced by a `Pt` value of "2" in DWB mm.
	{The paragraph number occupies the indentation space.}
	(par@doit): Introduce local register `par*do-indent`,
	manipulate it, and use it to control `ti` request instead of
	scattering the request across multiple locations.  Remove this
	register when done.  Clear `par@suppress-indentation` at end,
	since after indentation is suppressed once, it should not happen
	again until a special circumstance (the setting of a heading,
	display, or list) arises.
	(H): Convert test of `hd*htype` register, which tells us if